--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.33",
@@ -22,7 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "6.x",
     "redux": "^5.0.1"
   },
   "devDependencies": {
