--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "vitest": "vitest",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "coverage": "jest --coverage",
     "format": "prettier --write .",
     "lint": "eslint .",
     "type-check": "tsc"
@@ -19,31 +22,48 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@reduxjs/toolkit": "^1.8.1",
-    "@types/axios": "^0.14.0",
-    "@types/react-redux": "^7.1.33",
-    "@types/redux": "^3.6.0",
     "axios": "^1.6.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "6.x",
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
     "@testing-library/dom": "^9.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.2.5",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/axios": "^0.14.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux": "^3.6.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-jest": "^29.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^21.1.0",
+    "msw": "^2.0.11",
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
