fix: Dockerfile backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,13 @@
-FROM node:16
+FROM node:21
 
 WORKDIR /app/backend
 
-COPY package.json yarn.lock /app/backend/
+COPY package.json yarn.lock ./
 
 RUN yarn install
 
-COPY . /app/backend/
+COPY . .
 
 EXPOSE 4242
 
-# CMD ["yarn", "start:dev"]
+CMD ["yarn", "start:dev"]
