--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,19 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "vitest": "vitest",
+    "start": "webpack serve",
+    "build": "webpack --config webpack.config.js --mode production",
+    "tscheck": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "coverage": "jest --coverage",
-    "format": "prettier --write .",
-    "lint": "eslint .",
-    "type-check": "tsc"
+    "coverage": "jest --coverage"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -24,6 +22,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^1.6.2",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
@@ -55,6 +54,7 @@
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "file-loader": "^6.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -65,8 +65,10 @@
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
-    "vite": "^4.0.0",
-    "vitest": "^0.30.1"
+    "url-loader": "^4.1.1",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "eslintConfig": {
     "extends": [
