feat: Add more scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Challenge delliv",
   "scripts": {
     "start": "cd backend && cp .env_example .env && cd .. && docker compose up -d && sleep 180 && docker exec -it enock-delliv-challenge-backend-1 yarn prisma migrate dev",
-    "test": "cd backend && yarn test:cov && cd ../frontend && yarn test:cov"
+    "test": "cd backend && yarn test:cov && cd ../frontend && yarn test:cov",
+    "install:all": "cd backend && yarn install && cd ../frontend && yarn install"
   },
   "author": "Enock",
   "license": "ISC"
