--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://enock:123interview@postgres:5432/dellivbd?schema=public"
+# DATABASE_URL="postgresql://enock:123interview@localhost:5432/dellivbd?schema=public"
 
 JWT_SECRET="chavinhaSecreta"
 JWT_EXPIRES_IN="2h"
