--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Challenge delliv",
   "scripts": {
-    "start": "cd backend && cp .env_example .env && cd .. && docker compose up -d && sleep 180 && docker exec -it enock-delliv-challenge-backend-1 yarn prisma migrate dev",
+    "env": "cd backend && cp .env_example .env && cd ..",
+    "start": "docker compose up -d && sleep 180 && docker exec -it enock-delliv-challenge-backend-1 yarn prisma migrate dev",
     "test": "cd backend && yarn test:cov && cd ../frontend && yarn test:cov",
     "install:all": "cd backend && yarn install && cd ../frontend && yarn install"
   },
